--- a/styles.css
+++ b/styles.css
@@ -929,10 +929,6 @@ p.day-job {
   border-radius: 8px;
 }
 
-.section:first-child {
-  margin-right: 20px;
-}
-
 .section h2 {
   font-size: 2.5rem;
   font-weight: 700;
@@ -1024,6 +1020,12 @@ p.day-job {
   color: white;
   font-size: 1.2rem;
   font-weight: bold;
+}
+
+@media (min-width: 769px) {
+  .section:first-child {
+    margin-right: 20px;
+  }
 }
 
 /* Tablet and below styles */
